static: Fix unreachable edit button in stream name
We use javascript to adjust the font-size every time
the text in the stream name input is too big, so that
the edit button can be seen. Also the overflow hidden
has been removed.

--- a/static/styles/subscriptions.scss
+++ b/static/styles/subscriptions.scss
@@ -801,8 +801,6 @@ form#add_new_subscription {
             padding-bottom: 5px;
             white-space: nowrap;
             width: 270px;
-            overflow: hidden;
-            text-overflow: ellipsis;
         }
 
         .deactivate,
